--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <nav class="navbar">
         <h1 id="book-title">My Book</h1>
+        <span id="word-count" class="word-count"></span>
     </nav>
 
     <div class="container">
