Added dark mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <nav class="navbar">
         <h1 id="book-title">My Book</h1>
-        <span id="word-count" class="word-count"></span>
+        <div style="display: flex; align-items: center; gap: 1rem;">
+            <span id="word-count" class="word-count"></span>
+            <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Toggle dark mode"></button>
+        </div>
     </nav>
 
     <div class="container">
